--- a/i3/config
+++ b/i3/config
@@ -5,6 +5,12 @@
 #Mod1 is ALT, Mod4 is Win
 set $mod Mod1
 
+gaps inner 10
+gaps outer 0
+gaps top 0
+gaps bottom 0
+smart_borders on
+border_radius 5
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 10
@@ -44,7 +50,7 @@ for_window [class="URxvt"] border none
 for_window [class="URxvt"] floating enable
 for_window [title="Figure*"] floating enable
 for_window [title="*gvim*"] floating enable
-
+for_window [class="^.*"] border pixel 2 
 font pango:scientifica 8
 
 
@@ -225,4 +231,4 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Start up polybar
-#exec_always --no-startup-id $HOME/.config/polybar/launch.sh &
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh &
