--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,7 +16,6 @@ margin-top = 0
 
 include-file = ~/.config/polybar/bars.ini
 include-file = ~/.config/polybar/modules.ini
-include-file = ~/.config/polybar/user_modules.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -30,7 +29,7 @@ include-file = ~/.config/polybar/user_modules.ini
 monitor = DP-0
 
 ; Use the specified monitor as a fallback if the main one is not found.
-monitor-fallback =
+monitor-fallback = HDMI-1
 
 ; Require the monitor to be in connected state
 ; XRandR sometimes reports my monitor as being disconnected (when in use)
@@ -53,60 +52,21 @@ fixed-center = true
 width = 100%
 height = 28
 
-; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
-; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction 
-; of 50% minus 10 pixels
 offset-x = 0%
 offset-y = 0%
 
-; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = #5786bc
 
-; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = #FFFFFF
 
-; Background gradient (vertical steps)
-;   background-[0-9]+ = #aarrggbb
-;;background-0 = 
-
-; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
-; doesn't get rounded
-; Individual top/bottom values can be defined using:
-;   radius-{top,bottom}
 radius-top = 0.0
 radius-bottom = 0.0
 
-; Under-/overline pixel size and argb color
-; Individual values can be defined using:
-;   {overline,underline}-size
-;   {overline,underline}-color
 line-size = 2
 line-color = #fff
 
-; Values applied to all borders
-; Individual side values can be defined using:
-;   border-{left,top,right,bottom}-size
-;   border-{left,top,right,bottom}-color
-; The top and bottom borders are added to the bar height, so the effective
-; window height is:
-;   height + border-top-size + border-bottom-size
-; Meanwhile the effective window width is defined entirely by the width key and
-; the border is placed withing this area. So you effectively only have the
-; following horizontal space on the bar:
-;   width - border-right-size - border-left-size
-;border-size = 0
-;border-color = ${color.primary}
-
-; Number of spaces to add at the beginning/end of the bar
-; Individual side values can be defined using:
-;   padding-{left,right}
 padding = 2 
 
-; Number of spaces to add before/after each module
-; Individual side values can be defined using:
-;   module-margin-{left,right}
 module-margin-left = 0
 module-margin-right = 0
 
@@ -146,49 +106,7 @@ separator = " "
 ; Opacity value between 0.0 and 1.0 used on fade in/out
 dim-value = 1.0
 
-; Value to be used to set the WM_NAME atom
-; If the value is empty or undefined, the atom value
-; will be created from the following template: polybar-[BAR]_[MONITOR]
-; NOTE: The placeholders are not available for custom values
 wm-name = i3wm 
-
-; Locale used to localize various module data (e.g. date)
-; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale = 
-
-; Position of the system tray window
-; If empty or undefined, tray support will be disabled
-; NOTE: A center aligned tray will cover center aligned modules
-;
-; Available positions:
-;   left
-;   center
-;   right
-;   none
-tray-position = none
-
-; If true, the bar will not shift its
-; contents when the tray changes
-tray-detached = true
-
-; Tray icon max size
-tray-maxsize = 16
-
-; Background color for the tray container 
-; ARGB color (e.g. #f00, #ff992a, #ddff1023)
-; By default the tray container will use the bar
-; background color.
-tray-background = ${color.background-alt}
-
-; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
-tray-offset-x = 0
-tray-offset-y = 0
-
-; Pad the sides of each tray icon
-tray-padding = 2 
-
-; Scale factor for tray clients
-tray-scale = 1.0
 
 ; Restack the bar window and put it above the
 ; selected window manager's root
@@ -201,13 +119,6 @@ tray-scale = 1.0
 ;   i3 (requires: `override-redirect = true`)
 wm-restack = i3
 
-; Set a DPI values used when rendering text
-; This only affects scalable fonts
-; dpi = 
-
-; Enable support for inter-process messaging
-; See the Messaging wiki page for more details.
-;enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
@@ -225,14 +136,6 @@ double-click-right =
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
 cursor-click = 
 cursor-scroll = 
-
-;; WM Workspace Specific
-
-; bspwm
-;;scroll-up = bspwm-desknext
-;;scroll-down = bspwm-deskprev
-;;scroll-up = bspc desktop -f prev.local
-;;scroll-down = bspc desktop -f next.local
 
 ;i3
 scroll-up = i3wm-wsnext
@@ -254,32 +157,12 @@ scroll-down = i3wm-wsprev
 throttle-output = 5
 throttle-output-for = 10
 
-; Time in milliseconds that the input handler will wait between processing events
-;throttle-input-for = 30
-
-; Reload upon receiving XCB_RANDR_SCREEN_CHANGE_NOTIFY events
 screenchange-reload = false
 
-; Compositing operators
-; @see: https://www.cairographics.org/manual/cairo-cairo-t.html#cairo-operator-t
 compositing-background = source
 compositing-foreground = over
 compositing-overline = over
 compositing-underline = over
 compositing-border = over
 
-; Define fallback values used by all module formats
-;format-foreground = 
-;format-background = 
-;format-underline =
-;format-overline =
-;format-spacing =
-;format-padding =
-;format-margin =
-;format-offset =
-
-; Enables pseudo-transparency for the bar
-; If set to true the bar can be transparent without a compositor.
 pseudo-transparency = true
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
