--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,20 @@
-set -g default-terminal "screen-256color"
+setw -g mode-keys vi
+set -g status-bg blue
+set -g status-fg whte
+set -g pane-active-border-bg blue
+set -g pane-active-border-fg blue
+bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
 
-set -g mouse on
+bind | split-window -h
+bind - split-window -v
+bind _ split-window -v
 
-set -g status-bg black
-set -g status-fg white
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
-tmux_conf_theme_focused_pane=true
-
-set -g pane-border-style fg=white
-set -g pane-active-border-style fg=blue
-
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded."
+bind -n M-Left select-pane -L
+bind -n M-Down select-pane -D
+bind -n M-Up select-pane -U
+bind -n M-Right select-pane -R
