--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 setw -g mode-keys vi
 set -g status-bg blue
-set -g status-fg whte
+set -g status-fg white
 set -g pane-active-border-bg blue
 set -g pane-active-border-fg blue
 bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
